# MovieExplorer

./: README.md
backend/: add_10_kannada_movies.py  add_20_hindi_movies.py  add_30_telugu_movies.py  add_40_english_final.py  add_40_english_movies.py  add_final_hindi_movie.py  add_more_movies.py  add_movie_posters.py  add_remaining_20_telugu.py  add_tollywood_movies.py  complete_100_movies.py  complete_poster_audit.py  create_60_movies_with_posters.py  crud.py  database.py  final_poster_update.py  main.py  movies.db  populate_db.py  remove_pulp_fiction.py  remove_specific_movies.py  schemas.py  update_all_posters_comprehensive.py  update_celebrity_photos.py  update_real_posters.py
backend/movie_explorer/: pyproject.toml
backend/movie_explorer/src/movie_explorer/: main.py
backend/movie_explorer/src/movie_explorer/api/v1/: api_v1_router.py
backend/movie_explorer/src/movie_explorer/api/v1/endpoints/: actors.py  directors.py  genres.py  movie_explorer.py  movies.py
backend/movie_explorer/src/movie_explorer/schemas/: __init__.py  actor.py  director.py  genre.py  movie.py
backend/movie_explorer/src/movie_explorer/services/: __init__.py  actor_service.py  director_service.py  genre_service.py  movie_service.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: MovieCard.tsx  MovieFilters.tsx
frontend/src/pages/: MovieDetailPage.tsx  MoviesPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
